chore(preorder): change pagination to per product group and email goroutine refetch
